--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .article {
-    font-family: "Source Code Pro", Roboto, Courier, monospace;
+    font-family: "Roboto Mono", Courier, monospace;
     font-size: 12px;
     margin-bottom: 2em;
 }
@@ -21,5 +21,6 @@ body {
 }
 
 #xkcd img {
-    max-height: 75vh
+    max-height: 75vh;
+    max-width: 100%;
 }
