--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
   </header>
   <main class="container">
     <div id="xkcd" class="d-flex mb-4 justify-content-center">
+      <h1> {{resources.xkcd['title']}} </h1>
       <a href="{{resources.xkcd['link']}}" target="_blank">{{resources.xkcd["description"] | safe}}</a>
     </div>
 
