--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
     <h1><code>Hello, World!</code></h1>
   </header>
   <main class="container">
-    <div id="xkcd" class="d-flex mb-4 justify-content-center">
+    <div id="xkcd" class="d-flex flex-column align-items-center mb-4">
       <h1> {{resources.xkcd['title']}} </h1>
 <br>
       <a href="{{resources.xkcd['link']}}" target="_blank">{{resources.xkcd["description"] | safe}}</a>
