--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
     <hr>
     <div id="arxiv" class="row mb-4 bg-light">
       {% for article in resources.arxiv_articles %}
-      <div class="col-12 col-md-6 col-lg-4 article">
+      <div class="col-12 col-md-6 col-xl-4 article">
         <strong>{{article.title}}</strong>
         <br>
         {% set authors = article.author.split(",") %}
